# ManimCE-NodeEditor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  pyproject.toml
.github/workflows/: deploy-docs.yml
NodeEditor/: node_editor_main.py
NodeEditor/NodeEditorWindow/: nodeEditor_Window.py  node_content_widget.py  node_editor_window.py  node_graphics_node.py  node_graphics_scene.py  node_graphics_view.py  node_node.py
NodeEditor/NodeEditorWindow/core/: edge.py  node.py  scene.py  socket.py
NodeEditor/NodeEditorWindow/graphics/: graphics_edge.py  graphics_node.py  graphics_scene.py  graphics_socket.py
NodeEditor/NodeEditorWindow/ui/: node_editor_window.py
NodeEditor/qss/: nodestyle.qss
docs/source/: conf.py  index.rst
docs/source/node_editor_api/: index.rst
node_editor/: node_editor_main.py
node_editor/node_editor_calculator/: calc_window.py
node_editor/node_editor_window/: __init__.py
node_editor/node_editor_window/content/: node_content_widget.py
node_editor/node_editor_window/core/: edge.py  node.py  scene.py  scene_clipboard.py  scene_history.py  socket.py
node_editor/node_editor_window/graphics/: graphics_cutline.py  graphics_edge.py  graphics_node.py  graphics_scene.py  graphics_socket.py  graphics_view.py
src/: node_editor_calc_main.py  node_editor_main.py
src/ManimCE_NodeEditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/node_editor_calculator/: calc_sub_window.py  calc_window.py
src/node_editor_window/: __init__.py
translations/: zh_TW.ts
utils/: logger.py  qss_loader.py
(+36 files in other folders)
