[project]
name = "ManimCE-NodeEditor"
version = "0.0.3.dev2"
description = "A Node Editor for Manim Community Edition built with PyQt5."
authors = [
    { name = "Magicsoldier19", email = "magicsoldier19@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "docutils==0.21.2",
    "furo>=2025.7.19",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-inline-tabs>=2023.4.21",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
